[gd_scene load_steps=4 format=3 uid="uid://b3ebp1bga3qoa"]

[ext_resource type="Script" path="res://player_body.gd" id="1_6vclh"]
[ext_resource type="PackedScene" uid="uid://bn0206n4aejgv" path="res://player_area.tscn" id="1_ujh7h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yde1s"]
size = Vector2(20, 42)

[node name="PlayerBody" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_6vclh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_yde1s")
debug_color = Color(0.808029, 0.413832, 0, 0.42)

[node name="PlayerArea" parent="." instance=ExtResource("1_ujh7h")]

[node name="AnimatedSprite2D" parent="PlayerArea" index="0"]
frame_progress = 0.0

[node name="HealTimer" type="Timer" parent="PlayerArea"]
wait_time = 0.5
autostart = true

[node name="HealNotification" type="Label" parent="."]
z_index = 5
z_as_relative = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = 40.0
offset_right = 35.0
offset_bottom = 71.0
grow_horizontal = 2
grow_vertical = 2
text = "Heal at
Base"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="area_entered" from="PlayerArea" to="." method="_on_player_area_area_entered"]
[connection signal="timeout" from="PlayerArea/BulletTimer" to="." method="_on_bullet_timer_timeout"]
[connection signal="timeout" from="PlayerArea/DamageTimer" to="." method="_on_damage_timer_timeout"]
[connection signal="timeout" from="PlayerArea/HealTimer" to="." method="_on_heal_timer_timeout"]

[editable path="PlayerArea"]
